--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a class="navbar-brand navbar-right" href="https://learn.co" target="_blank">
-            <h6 class="powered_by">Powered by
+        <!--<a class="navbar-brand navbar-right" href="https://learn.co" target="_blank">
+             <h6 class="powered_by">Powered by
                 <svg id='svg__logo--text' viewBox='0 0 130.5 42' fill="currentColor" width="50" class="svg-center">
                   <path d='M41.2,29.5h13v5.1h-19V8h6V29.5z'/>
                   <path d='M61.1,26.7c0.4,2.6,1.9,4.1,4.3,4.1c1.5,0,2.6-0.5,3.4-1.7h5.7c-1.1,3.8-4.7,6.1-9.3,6.1 c-5.9,0-9.9-4.1-9.9-10.1c0-6,4-10.2,9.9-10.2c4.1,0,7.1,2,8.6,5.7c0.7,1.7,1,3.5,1,6.1H61.1z M68.9,22.7 c-0.2-2.3-1.6-3.5-3.8-3.5c-2.2,0-3.6,1.2-4.1,3.5H68.9z'/>
@@ -13,7 +13,7 @@
                   <path stroke-miterlimit='10' d='M15.1,22l8.4,0l-8.4,13.9V22z M12.4,5.6l0,13.7H4.1L12.4,5.6z M12.6,1L0.7,20.4c-0.2,0.3-0.2,0.7,0,1c0.2,0.4,0.6,0.5,1,0.5l10.8,0l0,18.4c0,0.5,0.3,1,0.8,1.1c0.1,0,0.2,0.1,0.3,0.1 c0.4,0,0.8-0.2,1-0.5l11.7-19c0.2-0.3,0.3-1.1,0.3-1.5c-0.2-0.8-0.5-1.2-1.2-1.2H15.2l0-17.5c0-0.5-0.4-1.1-1.3-1.2 c-0.1,0-0.2,0-0.3,0C13.2,0.5,12.8,0.7,12.6,1'/>
                 </svg>
             </h6>
-        </a>
+        </a>-->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
